Corrects columns spacing

--- a/src/Columns/Columns.scss
+++ b/src/Columns/Columns.scss
@@ -1,5 +1,4 @@
 .container {
-  flex-grow: 1;
   display: flex;
 
   > * {
